# pseudographics_renderer

./: README.md  pyproject.toml
examples/: bouncing_ball.py
pseudographics_renderer/: __init__.py  braille.py  grid.py  input.py  palette.py  runtime.py  surface.py
