[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudographics_renderer"
version = "0.1.0"
description = "Pygame-backed renderer that mimics a Braille pseudographics terminal."
requires-python = ">=3.9"
dependencies = [
    "pygame>=2.5",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
include = ["pseudographics_renderer*"]
